--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -203,6 +203,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise: Pre-process your image data and scale it to a pixel range of -1 to 1\n",
+    "\n",
+    "You need to do a bit of pre-processing; you know that the output of a `tanh` activated generator will contain pixel values in a range from -1 to 1, and so, we need to rescale our training images to a range of -1 to 1. (Right now, they are in a range from 0-1.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Complete the scale function\n",
+    "def scale(x, feature_range=(-1, 1)):\n",
+    "    ''' Scale takes in an image x and returns that image, scaled\n",
+    "       with a feature_range of pixel values from -1 to 1. \n",
+    "       This function assumes that the input x is already scaled from 0-1.'''\n",
+    "    # assume x is scaled to (0, 1)\n",
+    "    # scale to feature_range and return scaled x\n",
+    "    \n",
+    "    min, max = feature_range\n",
+    "    x = x * (max - min) + min\n",
+    "    \n",
+    "    return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min:  tensor(-0.8118)\n",
+      "Max:  tensor(0.8275)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "# check scaled range\n",
+    "# should be close to -1 to 1\n",
+    "img = images[0]\n",
+    "scaled_img = scale(img)\n",
+    "\n",
+    "print('Min: ', scaled_img.min())\n",
+    "print('Max: ', scaled_img.max())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
