feat: Define Discriminator model
Implement Discriminator adversarial network of the GAN.

--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -259,6 +259,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Define the Model\n",
+    "\n",
+    "A GAN is comprised of two adversarial networks, a discriminator and a generator.\n",
+    "\n",
+    "## Discriminator\n",
+    "\n",
+    "Your first task will be to define the discriminator. This is a convolutional classifier like you've built before, only without any maxpooling layers. To deal with this complex data, it's suggested you use a deep network with **normalization**. You are also allowed to create any helper functions that may be useful.\n",
+    "\n",
+    "#### Exercise: Complete the Discriminator class\n",
+    "* The inputs to the discriminator are 32x32x3 tensor images\n",
+    "* The output should be a single value that will indicate whether a given image is real or fake\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper conv function\n",
+    "def conv(in_channels, out_channels, kernel_size, stride=2, padding=1, batch_norm=True):\n",
+    "    \"\"\"Creates a convolutional layer, with optional batch normalization.\n",
+    "    \"\"\"\n",
+    "    layers = []\n",
+    "    conv_layer = nn.Conv2d(in_channels, out_channels, \n",
+    "                           kernel_size, stride, padding, bias=False)\n",
+    "    \n",
+    "    # append conv layer\n",
+    "    layers.append(conv_layer)\n",
+    "\n",
+    "    if batch_norm:\n",
+    "        # append batchnorm layer\n",
+    "        layers.append(nn.BatchNorm2d(out_channels))\n",
+    "     \n",
+    "    # using Sequential container\n",
+    "    return nn.Sequential(*layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Discriminator(nn.Module):\n",
+    "\n",
+    "    def __init__(self, conv_dim):\n",
+    "        \"\"\"\n",
+    "        Initialize the Discriminator Module\n",
+    "        :param conv_dim: The depth of the first convolutional layer\n",
+    "        \"\"\"\n",
+    "        super(Discriminator, self).__init__()\n",
+    "\n",
+    "        # complete init function\n",
+    "        self.conv_dim = conv_dim\n",
+    "\n",
+    "        # 32x32x3 input\n",
+    "        self.conv1 = conv(in_channels=3, out_channels=conv_dim, kernel_size=4, batch_norm=False) # first layer, no batch_norm\n",
+    "        # 16x16x128 out\n",
+    "        self.conv2 = conv(in_channels=conv_dim, out_channels=conv_dim*2, kernel_size=4)\n",
+    "        # 8x8x256 out\n",
+    "        self.conv3 = conv(in_channels=conv_dim*2, out_channels=conv_dim*4, kernel_size=4)\n",
+    "        # 4x4x512 out\n",
+    "        \n",
+    "        # final, fully-connected layer\n",
+    "        self.fc = nn.Linear(conv_dim*4*4*4, 1)        \n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward propagation of the neural network\n",
+    "        :param x: The input to the neural network     \n",
+    "        :return: Discriminator logits; the output of the neural network\n",
+    "        \"\"\"\n",
+    "        # define feedforward behavior\n",
+    "        \n",
+    "        # all hidden layers + leaky relu activation\n",
+    "        out = F.leaky_relu(self.conv1(x), 0.2)\n",
+    "        out = F.leaky_relu(self.conv2(out), 0.2)\n",
+    "        out = F.leaky_relu(self.conv3(out), 0.2)\n",
+    "        \n",
+    "        # flatten\n",
+    "        out = out.view(-1, self.conv_dim*4*4*4)\n",
+    "        \n",
+    "        # final output layer\n",
+    "        out = self.fc(out)\n",
+    "        \n",
+    "        return out\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "tests.test_discriminator(Discriminator)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
