--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -377,6 +377,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generator\n",
+    "\n",
+    "The generator should upsample an input and generate a *new* image of the same size as our training data `32x32x3`. This should be mostly transpose convolutional layers with normalization applied to the outputs.\n",
+    "\n",
+    "#### Exercise: Complete the Generator class\n",
+    "* The inputs to the generator are vectors of some length `z_size`\n",
+    "* The output should be a image of shape `32x32x3`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper deconv function\n",
+    "def deconv(in_channels, out_channels, kernel_size, stride=2, padding=1, batch_norm=True):\n",
+    "    \"\"\"Creates a transposed-convolutional layer, with optional batch normalization.\n",
+    "    \"\"\"\n",
+    "    # create a sequence of transpose + optional batch norm layers\n",
+    "    layers = []\n",
+    "    transpose_conv_layer = nn.ConvTranspose2d(in_channels, out_channels, \n",
+    "                                              kernel_size, stride, padding, bias=False)\n",
+    "    # append transpose convolutional layer\n",
+    "    layers.append(transpose_conv_layer)\n",
+    "    \n",
+    "    if batch_norm:\n",
+    "        # append batchnorm layer\n",
+    "        layers.append(nn.BatchNorm2d(out_channels))\n",
+    "        \n",
+    "    return nn.Sequential(*layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Generator(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, z_size, conv_dim):\n",
+    "        \"\"\"\n",
+    "        Initialize the Generator Module\n",
+    "        :param z_size: The length of the input latent vector, z\n",
+    "        :param conv_dim: The depth of the inputs to the *last* transpose convolutional layer\n",
+    "        \"\"\"\n",
+    "        super(Generator, self).__init__()\n",
+    "\n",
+    "        # complete init function\n",
+    "        \n",
+    "        self.conv_dim = conv_dim\n",
+    "        \n",
+    "        # first, fully-connected layer\n",
+    "        self.fc = nn.Linear(z_size, conv_dim*4*4*4)\n",
+    "\n",
+    "        # transpose conv layers\n",
+    "        self.t_conv1 = deconv(conv_dim*4, conv_dim*2, 4)\n",
+    "        self.t_conv2 = deconv(conv_dim*2, conv_dim, 4)\n",
+    "        self.t_conv3 = deconv(conv_dim, 3, 4, batch_norm=False)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward propagation of the neural network\n",
+    "        :param x: The input to the neural network     \n",
+    "        :return: A 32x32x3 Tensor image as output\n",
+    "        \"\"\"\n",
+    "        # define feedforward behavior\n",
+    "        \n",
+    "        # fully-connected + reshape \n",
+    "        out = self.fc(x)\n",
+    "        out = out.view(-1, self.conv_dim*4, 4, 4) # (batch_size, depth, 4, 4)\n",
+    "        \n",
+    "        # hidden transpose conv layers + relu\n",
+    "        out = F.relu(self.t_conv1(out))\n",
+    "        out = F.relu(self.t_conv2(out))\n",
+    "        \n",
+    "        # last layer + tanh activation\n",
+    "        out = self.t_conv3(out)\n",
+    "        out = F.tanh(out)\n",
+    "        \n",
+    "        return out\n",
+    "\n",
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "tests.test_generator(Generator)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
