--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -478,6 +478,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize the weights of your networks\n",
+    "\n",
+    "To help your models converge, you should initialize the weights of the convolutional and linear layers in your model. From reading the [original DCGAN paper](https://arxiv.org/pdf/1511.06434.pdf), they say:\n",
+    "> All weights were initialized from a zero-centered Normal distribution with standard deviation 0.02.\n",
+    "\n",
+    "So, your next task will be to define a weight initialization function that does just this!\n",
+    "\n",
+    "You can refer back to the lesson on weight initialization or even consult existing model code, such as that from [the `networks.py` file in CycleGAN Github repository](https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix/blob/master/models/networks.py) to help you complete this function.\n",
+    "\n",
+    "#### Exercise: Complete the weight initialization function\n",
+    "\n",
+    "* This should initialize only **convolutional** and **linear** layers\n",
+    "* Initialize the weights to a normal distribution, centered around 0, with a standard deviation of 0.02.\n",
+    "* The bias terms, if they exist, may be left alone or set to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.nn import init\n",
+    "\n",
+    "def weights_init_normal(m):\n",
+    "    \"\"\"\n",
+    "    Applies initial weights to certain layers in a model .\n",
+    "    The weights are taken from a normal distribution \n",
+    "    with mean = 0, std dev = 0.02.\n",
+    "    :param m: A module or layer in a network    \n",
+    "    \"\"\"\n",
+    "    # classname will be something like:\n",
+    "    # `Conv`, `BatchNorm2d`, `Linear`, etc.\n",
+    "    classname = m.__class__.__name__\n",
+    "    \n",
+    "    # TODO: Apply initial weights to convolutional and linear layers\n",
+    "    if classname.find(\"Conv\") != -1 or classname.find('Linear') != -1:\n",
+    "        torch.nn.init.normal_(m.weight.data, 0.0, 0.02)\n",
+    "    elif classname.find(\"BatchNorm2d\") != -1:\n",
+    "        torch.nn.init.normal_(m.weight.data, 1.0, 0.02)\n",
+    "        torch.nn.init.constant_(m.bias.data, 0.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Build complete network\n",
+    "\n",
+    "Define your models' hyperparameters and instantiate the discriminator and generator from the classes defined above. Make sure you've passed in the correct input arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "def build_network(d_conv_dim, g_conv_dim, z_size):\n",
+    "    # define discriminator and generator\n",
+    "    D = Discriminator(d_conv_dim)\n",
+    "    G = Generator(z_size=z_size, conv_dim=g_conv_dim)\n",
+    "\n",
+    "    # initialize model weights\n",
+    "    D.apply(weights_init_normal)\n",
+    "    G.apply(weights_init_normal)\n",
+    "\n",
+    "    print(D)\n",
+    "    print()\n",
+    "    print(G)\n",
+    "    \n",
+    "    return D, G\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise: Define model hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Discriminator(\n",
+      "  (conv1): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "  )\n",
+      "  (conv2): Sequential(\n",
+      "    (0): Conv2d(64, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "    (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  )\n",
+      "  (conv3): Sequential(\n",
+      "    (0): Conv2d(128, 256, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "    (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  )\n",
+      "  (fc): Linear(in_features=4096, out_features=1, bias=True)\n",
+      ")\n",
+      "\n",
+      "Generator(\n",
+      "  (fc): Linear(in_features=100, out_features=4096, bias=True)\n",
+      "  (t_conv1): Sequential(\n",
+      "    (0): ConvTranspose2d(256, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "    (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  )\n",
+      "  (t_conv2): Sequential(\n",
+      "    (0): ConvTranspose2d(128, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  )\n",
+      "  (t_conv3): Sequential(\n",
+      "    (0): ConvTranspose2d(64, 3, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define model hyperparams\n",
+    "d_conv_dim = 64\n",
+    "g_conv_dim = 64\n",
+    "z_size = 100\n",
+    "\n",
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "D, G = build_network(d_conv_dim, g_conv_dim, z_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training on GPU\n",
+    "\n",
+    "Check if you can train on GPU. Here, we'll set this as a boolean variable `train_on_gpu`. Later, you'll be responsible for making sure that \n",
+    ">* Models,\n",
+    "* Model inputs, and\n",
+    "* Loss function arguments\n",
+    "\n",
+    "Are moved to GPU, where appropriate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training on GPU!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL\n",
+    "\"\"\"\n",
+    "import torch\n",
+    "\n",
+    "# Check for a GPU\n",
+    "train_on_gpu = torch.cuda.is_available()\n",
+    "if not train_on_gpu:\n",
+    "    print('No GPU found. Please use a GPU to train your neural network.')\n",
+    "else:\n",
+    "    print('Training on GPU!')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
